--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author :
  #email : a@nope.com
  github : Dasonk
  twitter : Dasonk
- feedburner : feedname
+ #feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
