--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink: /:categories/:year/:month/:day/:title 
 
-exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+exclude: ["Dasonk.github.com.Rproj", ".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
 pygments: true
 
@@ -17,6 +17,10 @@ author :
  github : Dasonk
  twitter : Dasonk
  #feedburner : feedname
+
+name: Raptor Hunting
+description: Dason is not a bot
+url: http://dasonk.github.com
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
