--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : false #disqus
+    provider : facebook
     disqus :
       short_name : jekyllbootstrap
     livefyre :
@@ -91,10 +91,10 @@ JB :
     intensedebate :
       account : 123abc
     facebook :
-      appid : 123
+      appid : 413388768715557
       num_posts: 5
       width: 580
-      colorscheme: light
+      colorscheme: dark
    
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
