--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : Point Mass Prior
-tagline: Let the data speak
+tagline: Because data is over-rated
 author : 
  name : Dason
  #email : a@nope.com
@@ -85,11 +85,11 @@ JB :
   comments :
     provider : facebook
     disqus :
-      short_name : jekyllbootstrap
+      short_name : 
     livefyre :
-      site_id : 123
+      site_id : 
     intensedebate :
-      account : 123abc
+      account : 
     facebook :
       appid : 413388768715557
       num_posts: 5
@@ -101,9 +101,9 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #        
   analytics :
-    provider : false #google 
+    provider : google 
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-35391629-1'
     getclicky :
       site_id : 
     mixpanel :
