--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ exclude: ["Rmd", "Dasonk.github.com.Rproj", "index_old.md", ".rvmrc", ".rbenv-ve
 auto: true
 pygments: true
 
+markdown: kramdown
+
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
