--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ markdown: kramdown
 title : Point Mass Prior
 tagline: Because data is over-rated
 author : 
- name : Dason
- #email : a@nope.com
+ name : Dason Kurkiewicz
+ #email : Dasonk iastate edu
  github : Dasonk
  twitter : Dasonk
  #feedburner : feedname
